# dianyun

./: .gitignore  CMakeLists.txt  MDC_Architecture_Design.md  README.md
config/: calibration.yaml  sensor_config.yaml
docs/: API_Reference.md  DEVELOPMENT.md  Tuning_Guide.md
src/: main.cpp
src/common/: constants.h  data_types.h
src/processing/: imu_processor.cpp  imu_processor.h  pointcloud_classifier.cpp  pointcloud_classifier.h  pointcloud_colorer.cpp  pointcloud_colorer.h  pointcloud_stitcher.cpp  pointcloud_stitcher.h
src/sensor_driver/: camera_driver.cpp  camera_driver.h  imu_driver.cpp  imu_driver.h  lidar_driver.cpp  lidar_driver.h  sensor_base.h
src/time_sync/: clock_manager.cpp  clock_manager.h  time_sync.cpp  time_sync.h
src/utils/: logger.cpp  logger.h
src/visualization/: visualizer.cpp  visualizer.h
test/: test_imu_processor.cpp  test_pointcloud_pipeline.cpp  test_sensor_drivers.cpp  test_time_sync.cpp  test_visualization.cpp
